# coincheck

./: .gitignore  Cargo.toml  diesel.toml  docker-compose.yml  todo.md  transactions.csv
migrations/2025-03-18-002141_create_orders/: down.sql  up.sql
migrations/2025-03-18-042632_create_order/: down.sql  up.sql
migrations/2025-03-19-082040_create_tickers/: down.sql  up.sql
migrations/2025-03-20-071347_create_summaries/: down.sql  up.sql
migrations/2025-03-20-071659_create_summary_records/: down.sql  up.sql
migrations/2025-03-21-054232_change_column_type/: down.sql  up.sql
migrations/2025-03-25-024834_add_coloumn_buy_rate_to_orders/: down.sql  up.sql
migrations/2025-03-25-030051_change_cloumn_orders/: down.sql  up.sql
migrations/2025-03-26-144948_add_column_error_msg_to_orders/: down.sql  up.sql
migrations/2025-03-26-150503_add_column_error_msg_to_orders/: down.sql  up.sql
migrations/2025-03-27-040357_create_optimized_mas/: down.sql  up.sql
migrations/2025-03-28-021423_rename_column_orders/: down.sql  up.sql
migrations/2025-03-28-022655_add_column_spread_threshold_to_orders/: down.sql  up.sql
migrations/2025-03-28-042216_add_column_ma_short_to_orders/: down.sql  up.sql
migrations/2025-03-28-081735_remove_default_from_api_call_success_at/: down.sql  up.sql
src/: db.rs  error.rs  lib.rs  main.rs  schema.rs
src/api/: mod.rs  slack.rs
src/models/: mod.rs  optimized_ma.rs  order.rs  summary.rs  summary_record.rs  ticker.rs  transaction.rs  util.rs
src/repositories/: balance.rs  mod.rs  optimized_ma.rs  order.rs  summary.rs  ticker.rs  (+1 more)
(+12 files in other folders)
