[package]
name = "coincheck"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2", features = ["postgres", "chrono", "r2d2", "numeric"] }
bigdecimal = { version = "0.4", features = ["serde"] }
csv = "1.3"
serde_json = "1.0"
thiserror = "1.0"
simplelog = "0.12"
log = "0.4"
plotters = "0.3"
plotters-bitmap = "0.3"
async-trait = "0.1"
